tests/NormalTests/paczka1/fuzzy1/80771659.err
Error in line 4: OrfJf S358 95,63
Error in line 5: UOu S105 -3,8
Error in line 7: cidz2gbMYzE S105 90,3
Error in line 13: ayZ S358 47,6
Error in line 19: cidz2gbMYzE S358 25,9
Error in line 31: UOu A54 43,0
Error in line 28: ayZ S358 60,0
Error in line 37: BCYnS64TXZi A54 96,7
